关注，取消关注，修改备注名，投诉
在mbprogresshud+zxaddtion里添加了zxfailedstring

--- a/Aier360/Support Files/en.lproj/Localizable.strings
+++ b/Aier360/Support Files/en.lproj/Localizable.strings
@@ -52,3 +52,8 @@
 "Saving" = "Saving";
 
 "Select Photos" = "Select Photos";
+
+/**
+ *  操作失败，请重试
+ */
+"failed, please retry" = "failed, please retry";
